// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test PolygonOptions should render correctly 1`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="input"
      >
        UnitInput: 
        polygon-sides
        <p>
          precision: 
          0
        </p>
        <p>
          underline
        </p>
        <input
          id="polygon-sides"
          min="3"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly 2`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="input"
      >
        UnitInput: 
        polygon-sides
        <p>
          precision: 
          0
        </p>
        <p>
          underline
        </p>
        <input
          id="polygon-sides"
          min="3"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly 3`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="input"
      >
        UnitInput: 
        polygon-sides
        <p>
          precision: 
          0
        </p>
        <p>
          underline
        </p>
        <input
          id="polygon-sides"
          min="3"
          value="8"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly 4`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="input"
      >
        UnitInput: 
        polygon-sides
        <p>
          precision: 
          0
        </p>
        <p>
          underline
        </p>
        <input
          id="polygon-sides"
          min="3"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly in mobile 1`] = `
<div>
  <div>
    mock-object-panel-number-item
    <br />
    id:
    polygon-sides
    label:
    Sides
    min:
    3
    max:
    9007199254740991
    decimal:
    0
    value:
    5
    unit:
    hasMultiValue:
    false
    <input />
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly in mobile 2`] = `
<div>
  <div>
    mock-object-panel-number-item
    <br />
    id:
    polygon-sides
    label:
    Sides
    min:
    3
    max:
    9007199254740991
    decimal:
    0
    value:
    5
    unit:
    hasMultiValue:
    false
    <input />
  </div>
</div>
`;
